# silvanus

./: .gitignore  LICENSE  README.md  collect_data.py  pyproject.toml  scrape_basics.py  scrape_details.py  scraper.py
