[tool.poetry]
name = "silvanus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
duckdb = "^0.6.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
plotly = "^5.13.0"
selenium = "^4.8.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.21.1"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
